--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ button {
     height: 25px;
 }
 
-.close-button img {
+.mobile-menu__close-btn img {
     height: 20px;
 
 }
